feat: 모든 둠즈 조회 및 닉네임 검색 기능 추가